# wingspan

./: .dockerignore  .gitattributes  .gitignore  BIRDS.md  CLAUDE.md  DECISIONS.md  Dockerfile  LICENSE  README.md  RESEARCH.md  TODO.md  TRAINING.md  cards.csv  configurator_defaults.json  export_card_attrs.py  game.html  game_data.json  game_test.html  main.html  pyproject.toml  summary.html
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
.understand-anything/.trash-1781064424/: assemble-review.json  batch-1-part-1.json  batch-1-part-2.json  batch-13.json  batch-14.json  batch-19-part-2.json  batch-19-part-3.json  batch-2-part-1.json  batch-2-part-2.json  batch-20.json  batch-4-part-1.json  batch-5-part-2.json  batch-6-part-1.json  batch-6-part-2.json  batch-9.json  batches.json  fingerprint-input.json  layers.json  review.json  tour.json
.understand-anything/.trash-1781064424/tmp/: all_edges.json  batch_11_data.json  batch_11_files.txt  batch_12_data.json  batch_12_files.txt  batch_13_data.json  batch_14_data.json  batch_14_files.txt  batch_15_files.txt  batch_18_data.json  batch_19_data.json  batch_1_data.json  batch_20_data.json  batch_3_data.json  batch_4_data.json  batch_4_files.txt  batch_5_data.json  batch_5_files.txt  batch_7_data.json  batch_8_files.txt  batch_9_data.json  review2.json  tour_input.json  ua-arch-analyze.js  ua-arch-input.json  ua-arch-results.json  ua-file-analyzer-input-1.json  ua-file-analyzer-input-10.json  ua-file-analyzer-input-11.json  ua-file-analyzer-input-13.json  ua-file-analyzer-input-14.json  ua-file-analyzer-input-15.json  ua-file-analyzer-input-16.json  ua-file-analyzer-input-17.json  ua-file-analyzer-input-18.json  ua-file-analyzer-input-19.json  ua-file-analyzer-input-20.json  ua-file-analyzer-input-3.json  ua-file-analyzer-input-4.json  ua-file-analyzer-input-9.json  (+16 more)
.understand-anything/tmp/: batch_10_data.json  batch_10_files.txt  batch_13_files.txt  batch_15_data.json  batch_16_data.json  batch_16_files.txt  batch_17_data.json  batch_17_files.txt  batch_18_files.txt  batch_19_files.txt  batch_1_files.txt  batch_20_files.txt  batch_2_data.json  batch_2_files.txt  batch_3_files.txt  batch_6_data.json  batch_6_files.txt  batch_7_files.txt  batch_8_data.json  batch_9_files.txt  file_nodes.json  import_edges.json  ua-file-analyzer-input-12.json  ua-file-analyzer-input-2.json  ua-file-analyzer-input-5.json  ua-file-analyzer-input-6.json  ua-file-analyzer-input-7.json  ua-file-analyzer-input-8.json  ua-file-extract-results-10.json  ua-file-extract-results-15.json  ua-file-extract-results-16.json  ua-file-extract-results-17.json  ua-file-extract-results-2.json  ua-file-extract-results-20.json  ua-file-extract-results-3.json  ua-file-extract-results-7.json  ua-file-extract-results-8.json  ua-import-map-input.json
deploy/: README.md  ecs-task-def.json  main.tf  run.example.yaml
docs/: BIRDS.md  BONUSES.md  DECISIONS.md  GAMELOG.md  PROJECT.md  QUALITY.md  RESEARCH.md  TRAINING.md  VERSIONING.md  reward_modes.md
docs/reports/: board-self-attention.md  cached-food-audit.md  critic-rewards.md
scripts/: auto_merge_worktree.sh  check_mp_collect.py  create_worktree.sh  gen_arch_experiment.py  measure_ipc.py  merge_worktree.sh  profile_collection.py  quality_gate.sh
src/wingspan/: __init__.py  __main__.py  actions.py  agents.py  architecture.py  cards.py  cli.py  decisions.py  encode.py  game.py  hand_model.py  introspect.py  mlp.py  model.py  report.py  report_svg.py  sampling.py  selfplay.py  state.py  train.py  version.py
src/wingspan/agents/: INDEX.md  __init__.py  base.py  cli.py  display.py  interactive.py
src/wingspan/cards/: INDEX.md  __init__.py  parse.py  schema.py
src/wingspan/cloud/: INDEX.md  __init__.py  __main__.py  monitor.py  runfile.py  runner.py  s3sync.py  status.py
src/wingspan/compat/: INDEX.md  __init__.py  v0_0.py  v0_1.py  v0_2.py  v0_3.py  v0_4.py  v0_6.py  v0_7.py  v0_8.py  v1_0.py  v1_3.py
src/wingspan/data/: goals.json
src/wingspan/encode/: INDEX.md  __init__.py  choice_encode.py  layout.py  state_encode.py  stripes.py
src/wingspan/engine/: INDEX.md  __init__.py  actions.py  core.py  helpers.py  log_format.py  playability.py  powers.py  reactors.py  scoring.py
src/wingspan/gamelog/: INDEX.md  __init__.py  models.py  recorder.py  render_text.py
src/wingspan/instrumentation/: INDEX.md  __init__.py  config.py  dispatcher.py  events.py  registry.py
src/wingspan/model/: INDEX.md  __init__.py  core.py  hand_model.py  mlp.py
src/wingspan/players/: INDEX.md  __init__.py  decision_probe.py  factory.py  loaders.py  spec.py  value_sink.py
src/wingspan/reporting/: INDEX.md  __init__.py  card_view.py  encode_viewer.py  game_log_capture.py  game_log_csv.py  game_log_html.py  html.py  humanize.py  inspect_cli.py  svg.py
src/wingspan/setup_model/: INDEX.md  __init__.py  architecture.py  candidates.py  encode.py  generate.py  record.py  stripes.py
src/wingspan/tournament/: INDEX.md  __init__.py  app.py  config.py  dashboard.py  elo.py  models.py  participants.py  picker.py  results.py  runner.py  (+2 more)
tests/: conftest.py  stub_agents.py  test_activation_log.py  test_becomes_unplayable.py  test_birdfeeder.py  test_birds_no_eggs_integration.py  test_bonus_categories.py  test_bonus_linear_value.py  test_bootstrap_opponent.py  test_card_parse.py  test_card_table_cache.py  test_choice_landing_slot.py  test_cloud_runfile.py  test_cloud_s3sync.py  test_cloud_status.py  test_combine_gain_food.py  test_commit_row_pricing.py  test_compat_shim_v0_0.py  test_compat_shim_v0_3.py  test_compat_shim_v0_4.py  test_compat_shim_v0_7.py  test_compat_shim_v0_8.py  test_compat_v0_0.py  test_compat_v0_1.py  test_compat_v0_2.py  test_compat_v1_0.py  test_compat_v1_3.py  test_convergence_charts.py  test_dagger.py  test_decision_families.py  test_decision_shapes.py  test_discard_egg_for_wild.py  test_dynamic_bonus_scoring.py  test_egg_goal_delta.py  test_encode.py  test_encode_spec.py  test_encode_viewer.py  test_engine_agent_dispatch.py  test_era_pinned_resume.py  test_evaluate_core.py  (+106 more)
(+95 files in other folders)
