[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wingspan"
version = "0.1.0"
description = "Wingspan board-game simulator and RL training pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "pydantic>=2.0",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
wingspan-play = "wingspan.cli:main_manual"
wingspan-random = "wingspan.cli:main_random"
wingspan-train = "wingspan.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wingspan = ["data/*.json"]
