[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wingspan"
version = "0.1.0"
description = "Wingspan board-game simulator and RL training pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "pydantic>=2.0",
    "pyyaml",
    "rich>=13.7",
    "psutil>=5.9",  # host CPU / RAM telemetry for the dashboard SYSTEM band
    "boto3>=1.34",  # S3 persistence for cloud training runs (wingspan.cloud)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",  # coverage measurement; full gate includes regression check
    "pytest-xdist>=3.5",  # parallel test runs (the gate's default full-suite mode)
    "pyright>=1.1.400",
    "black>=24.0",
    "isort>=5.13",
    "boto3-stubs[s3]",  # typed S3 client for strict pyright over wingspan.cloud
    "types-PyYAML",  # yaml.safe_load typing for strict pyright
]

[project.scripts]
wingspan = "wingspan.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wingspan = ["data/*.json"]

# --- Tooling -------------------------------------------------------------
# Quality gate (see CLAUDE.md "Quality gate"): `pyright` must be clean in
# strict mode before any change is finalized, then `isort` + `black` are run
# for consistent formatting. Both editors (Pylance) and the CLI read the
# config below, so humans and AI agents see identical results.

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src", "tests"]  # src: wingspan package; tests: stub_agents and shared helpers
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# torch's type stubs under-export runtime names (torch.cat, torch.ones,
# torch.float32, ...); the resulting reportPrivateImportUsage noise is a stub
# artifact, not a real error, so silence just that rule.
reportPrivateImportUsage = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]
known_first_party = ["wingspan"]

# --- Coverage (full gate only; regression-checked against coverage_baseline.txt) ---
# The full gate (no section flags) re-runs pytest serially with --cov and compares
# the TOTAL % against coverage_baseline.txt in the repo root. Baseline ratchets up
# automatically; the gate fails if it drops. Partial --pytest runs skip coverage.
# For an HTML report alongside the check:
#   bash scripts/quality_gate.sh --pytest --cov --cov-report=term-missing --cov-report=html

[tool.coverage.run]
source_pkgs = ["wingspan"]  # keyed on the import package -> CWD-independent
branch = true
# mp_collect's ProcessPoolExecutor workers + the loop's sysmon thread both run
# measured code; parallel mode writes one data file per process and pytest-cov
# combines them at session end.
concurrency = ["multiprocessing", "thread"]
parallel = true
omit = [
    "*/wingspan/cli.py",               # argparse CLI boilerplate
    "*/wingspan/__main__.py",          # dispatcher entry point
    "*/wingspan/training/charts/*.py", # chart/visualization generation
    "*/wingspan/cloud/*.py",           # AWS/S3 integration (needs live cloud)
]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if typing.TYPE_CHECKING:",
    "raise NotImplementedError",
    "@typing.overload",
]

[tool.coverage.html]
directory = "htmlcov"
